WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46465
[Qt] QtTestBrowser defaultUrl does not work
https://bugs.webkit.org/show_bug.cgi?id=46465
Summary
[Qt] QtTestBrowser defaultUrl does not work
Chang Shu
Reported
2010-09-24 07:23:42 PDT
QtTestBrowser is capable of loading a local index.html by default. However, it is broken now.
Attachments
fix patch
(1.30 KB, patch)
2010-09-24 07:41 PDT
,
Chang Shu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chang Shu
Comment 1
2010-09-24 07:41:57 PDT
Created
attachment 68678
[details]
fix patch
Csaba Osztrogonác
Comment 2
2010-09-24 08:51:41 PDT
Comment on
attachment 68678
[details]
fix patch LGTM, r=me
Chang Shu
Comment 3
2010-09-24 08:53:32 PDT
(In reply to
comment #2
)
> (From update of
attachment 68678
[details]
) > LGTM, r=me
thanks for the quick review!
Andreas Kling
Comment 4
2010-09-24 09:02:31 PDT
> [Qt] Fix the code to check file existence.
In the future, please write more detailed ChangeLogs. Example:
> [Qt] Fix loading of the default URL (~/index.html) in QtTestBrowser > > We were erroneously checking for the presence of a *directory* called index.html in the user's > home directory. Correct this by using QFile::exists() instead of QDir::exists().
WebKit Commit Bot
Comment 5
2010-09-24 09:10:53 PDT
Comment on
attachment 68678
[details]
fix patch Clearing flags on attachment: 68678 Committed
r68259
: <
http://trac.webkit.org/changeset/68259
>
WebKit Commit Bot
Comment 6
2010-09-24 09:10:58 PDT
All reviewed patches have been landed. Closing bug.
Antonio Gomes
Comment 7
2010-09-24 09:13:27 PDT
Hum I think this is kinda useless :-( Is anyone leaving an index.html file in the home root dir for testing?
Csaba Osztrogonác
Comment 8
2010-09-24 09:21:48 PDT
(In reply to
comment #4
)
> > [Qt] Fix the code to check file existence. > > In the future, please write more detailed ChangeLogs. > > Example: > > > [Qt] Fix loading of the default URL (~/index.html) in QtTestBrowser > > > > We were erroneously checking for the presence of a *directory* called index.html in the user's > > home directory. Correct this by using QFile::exists() instead of QDir::exists().
It is a very simple fix, it's trivial to understand what was wrong. I don't think if we needed so detailed changelog what you mentioned. But I agree detailed comments are always welcome. (In reply to
comment #7
)
> Hum I think this is kinda useless :-( Is anyone leaving an index.html file in the home root dir for testing?
Not at all. Previously I used this feature. :) It is good for lazy peoples. :)
Chang Shu
Comment 9
2010-09-24 10:08:29 PDT
> (In reply to
comment #7
) > > Hum I think this is kinda useless :-( Is anyone leaving an index.html file in the home root dir for testing? > Not at all. Previously I used this feature. :) > It is good for lazy peoples. :)
Right. :) The test browser does not have bookmarks. And typing in the url eidtor is kind of painful, especially on the phone.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug