2010-09-24  Chang Shu  <chang.shu@nokia.com>

Reviewed by Csaba Osztrogonác.

        [Qt] Fix the code to check file existence.
        https://bugs.webkit.org/show_bug.cgi?id=46465

        * QtTestBrowser/main.cpp:
        (main):

Canonical link: https://commits.webkit.org/58958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68259 268f45cc-cd09-0410-ab3c-d52691b4dbfc